# zmb-md-converter

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  typos.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
legacy/: MDParallel2Hyperstack_v3.py
scripts/: MD_converter.bat  MD_converter.py
src/zmb_md_converter/: __init__.py  convert.py  gui.py  io.py  parsing.py
src/zmb_md_converter/io/: MetaSeriesTiff.py  assembly.py  parsing.py
tests/: conftest.py  test_convert.py  test_io.py  test_parsing.py
tests/io/: test_assembly.py  test_parsing.py
